# meet37

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  README.md  TODO.md  ai.txt  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  nginx.conf  package-lock.json  package.json
backend/cmd/server/: main.go
backend/docker/: entrypoint.sh
backend/docs/: API.md  ARCHITECTURE.md  BUSINESS_LOGIC.md  CONFIGURATION.md  DATA_MODEL.md  DOCKER.md  FILE_SHARING.md  FRONTEND_GUIDE.md  P2P_FIRST_MEDIA.md  RUNBOOK.md  SCALING.md  SECURITY.md  TESTING.md  WEBSOCKET.md
backend/internal/cluster/: cluster.go
backend/internal/config/: config.go
backend/internal/db/: db.go  db_test.go
backend/internal/handlers/: admin.go  admin_disk_unix.go  admin_disk_windows.go  admin_metrics.go  auth.go  handlers_test.go  room.go  ws.go
backend/internal/middleware/: middleware.go  middleware_test.go
backend/internal/models/: models.go
backend/internal/sfu/: sfu.go  sfu_test.go
backend/internal/signaling/: signaling.go  signaling_test.go
backend/migrations/: 0001_create_rooms.sql
backend/prisma/: schema.prisma
backend/src/: config.rs  config.ts  deps.ts  error.rs  index.ts  main.rs  rate_limit.rs  routes.rs  server.ts  state.rs
backend/src/middleware/: rateLimit.ts
backend/src/routes/: files.ts  health.ts  rooms.ts
backend/src/services/: livekit.ts  rooms.ts  uploads.ts
backend/src/utils/: httpError.ts  sanitizeFilename.ts  token.ts
caddy/: Caddyfile
(+305 files in other folders)
